# 2015-06-22_18-55_clams

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README  clam-qt.pro  configure.ac
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml  gitian-win32.yml
contrib/gitian-downloader/: allejuppa-key.pgp  xploited.pgp
contrib/macdeploy/: DS_Store  detached-sig-create.sh  fancy.plist  macdeployqtplus
depends/: Makefile
doc/: Doxyfile  README  README.md  README_windows.txt  assets-attribution.txt  build-msw.txt  build-osx.md  build-osx.txt  build-unix.md  build-unix.txt  coding.txt  gitian-building.md  readme-qt.rst  release-process.md
share/: setup.nsi  setup.nsi.in
share/qt/: Info.plist  Info.plist.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  allocators.h  base58.h  bignum.h  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  chainparams.cpp  chainparams.h  checkpoints.cpp  clamspeech.cpp  clamspeech.h  clientversion.h  coincontrol.h  core.h  crypter.cpp  crypter.h  db.cpp  db.h  init.cpp  irc.cpp  kernel.cpp  kernel.h  key.cpp  key.h  keystore.cpp  main.cpp  main.h  makefile.bsd  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  miner.cpp  (+38 more)
src/json/: json_spirit_error_position.h  json_spirit_reader_template.h  json_spirit_writer_template.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  guiutil.cpp  guiutil.h  macnotificationhandler.mm  notificator.cpp  notificator.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  qrcodedialog.cpp  qrcodedialog.h  qtipcserver.cpp  qtipcserver.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  signverifymessagedialog.cpp  trafficgraphwidget.cpp  transactiondesc.cpp  (+9 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  (+25 more)
src/qt/res/: bitcoin-qt-res.rc  bitcoin-qt.rc
src/qt/res/icons/: bitcoin.icns
src/qt/res/text/: style.qss
src/test/: base58_tests.cpp  mruset_tests.cpp  test_bitcoin.cpp
src/zerocoin/: CoinSpend.h
